--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
